--- a/generate/dune
+++ b/generate/dune
@@ -2,5 +2,5 @@
 (executable
  (name generate_bindings)
  (libraries xmlm containers)
- (flags :standard -w -37 -w -32 -w -26)
+ (flags :standard -w -37 -w -32 -w -26 -w -69)
  (preprocess (pps ppx_deriving.show)))
