--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         echo '' | bash -c "sh <(curl -fsSL https://raw.githubusercontent.com/ocaml/opam/master/shell/install.sh)"
         opam init
-        opam install -y dune dune-configurator
+        opam install -y dune dune-configurator ppx_deriving xmlm containers
     - name: Build ocaml-gtk
       run: |
         eval `opam env`
